字节码文件解析(上)。